# FB_Coating_Digital_Twin

./: .gitignore  DEPLOYMENT.md  MODELLING_BACKGROUND_README.md  README.md  app.py  app_plotly.py  environment.yml  plotly_figures.py  pyproject.toml  requirements.txt
MATLAB_Legacy/Coater 1 stage/: Calcul_DryingRate.m  Calcul_HeatTransfer.m  Calcul_MassTransfer.m  Livescript.mlx  ModelDissolution.mlx  ModelDrying.mlx  ModelPreHeating.mlx  ModelSpraying.mlx
MATLAB_Legacy/Coater 1 stage/Minimisation/: Minimisation.mlx  ordre_1.m  ordre_2.m
MATLAB_Legacy/Coater 1 stage/Not use/: IRIS_DoE_Stirrer_anaylsis_v01.mlx  ModelCoater.mlx  bismodel.m  exchange_rate.m  livescript_model.mlx  model.m  model_drying.m  pre_heating.mlx  script_model.m
MATLAB_Legacy/Coater 1 stage/Output Files/: DoE Bosch (Dec 2018)_Matlab processed data_All runs.mat  DoE Bosch (Dec 2018)_Matlab processed data_Run01.mat  (+19 more)
notebooks/: 01_preheating.ipynb  02_spraying.ipynb  03_drying.ipynb  04_dissolution.ipynb  05_FB_Coating_Digital_Twin.ipynb  05a_FB_Coating_Digital_Twin_Demo.ipynb  05b_FB_Coating_Digital_Twin.ipynb  06_FB_Twin_Validation.ipynb
src/: extract_doe_inputs.py
src/Coating_WG_coef_optimization/: 01_fit_dissolution_k.py  02_invert_dissolution_model.py  03_invert_spraying_ode.py  04_invert_drying_ode.py  05_validate_inferred_params.py  06a_fit_r_spraying.py  06b_fit_r_drying.py
src/fluid_bed/: __init__.py  config.py  data_loader.py  drying.py  kinetics.py  parameters.py  simulate.py  transfer.py
src/fluid_bed/models/: __init__.py  (+5 more)
tests/: test_simulate.py  test_transfer.py
(+3 files in other folders)
